fixed a css issue on mobile

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -22,7 +22,7 @@ body {
   }
   @media (max-width: 980px) {
     body {
-      padding-top: 0;
+      padding-top: 60px;
     }
   }
 
@@ -99,7 +99,7 @@ a {
     padding: 1.0rem 0 0 0;
 
     button {
-        width: 100px;
+        width: 10px;
     }
 
 }
