--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -114,7 +114,6 @@ a {
 
 #main_content {
   margin-left: 25px;
-  padding-top: 70px;
 
   .post_wrapper {
     padding: 3em;
